Try midnight theme

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: RISC-V Lab Service
 description: Free access to RISC-V Boards.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-architect
+theme: jekyll-theme-midnight
