Hide downloads buttons

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: RISC-V Lab Service
 description: Free access to RISC-V Boards.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
