--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: RISC-V Lab Service
-description: Free access to RISC-V Boards.
+title: RISC-V Lab @ PLCT Lab, ISCAS
+description: Free access to RISC-V Boards for open source developers worldwide.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
